ultimas modificaciones para desplegar en guthub pages

--- a/Angular/02-bases/src/app/app.component.html
+++ b/Angular/02-bases/src/app/app.component.html
@@ -3,10 +3,12 @@
 <p>Bienvenidos a angular</p> -->
 
 
-<app-counter></app-counter>
+<!-- <app-counter></app-counter>
 
 
   <app-hero></app-hero>
 
 
-<app-hero-list></app-hero-list>
+<app-hero-list></app-hero-list> -->
+
+<app-dbz-main></app-dbz-main>
